# shridhar

./: .gitignore  README.md  app.py  debug_supabase.py  get_file_urls.py  main.py  pyproject.toml  requirements.txt  setup_database.sql  test.py
config/: configuration.py
data/: demo.docx
src/: doc_extractor.py  llm_parcing.py  llm_parsing.py  supabase_client.py  text_to_speech.py
utils/: logger.py
